refactor: refact specifications files
