# src/modules/cars/entities/Speceification.ts
@@ -1,16 +1,25 @@
-import { v4 as uuidV4 } from "uuid";
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm'
+import { v4 as uuidV4 } from 'uuid'
 
+@Entity('specifications')
 class Specification {
-    id?: string;
-    name: string;
-    description: string;
-    created_at: Date;
+  @PrimaryColumn()
+  id?: string
 
-    constructor() {
-        if (!this.id) {
-            this.id = uuidV4();
-        } 
+  @Column()
+  name: string
+
+  @Column()
+  description: string
+
+  @CreateDateColumn()
+  created_at: Date
+
+  constructor() {
+    if (!this.id) {
+      this.id = uuidV4()
     }
+  }
 }
 
 export { Specification }
